--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,39 +1,66 @@
 main:
-
-  # - title: Continual Learning for Abdominal Multi-Organ and Tumor Segmentation
-  #   authors: Yixiao Zhang, Xinyi Li, Huimiao Chen, Alan Yuille, <strong>Yaoyao Liu*</strong>, Zongwei Zhou* (*Corresponding authors)
-  #   conference_short: MICCAI
-  #   conference: International Conference on Medical Image Computing and Computer-Assisted Intervention <strong>(MICCAI)</strong>, 2023.
-  #   pdf: https://arxiv.org/pdf/2306.00988.pdf
-  #   code: https://github.com/MrGiovanni/ContinualLearning
-  #   bibtex: https://bib.yliu.me/MICCAI23.txt
-  #   image: ./assets/img/teaser_example_2.png
-  #   notes: Early Accept
-
-  # - title: "Mnemonics Training: Multi-Class Incremental Learning without Forgetting"
-  #   authors: <strong>Yaoyao Liu</strong>, Yuting Su, An-An Liu, Bernt Schiele, Qianru Sun
-  #   conference_short: CVPR
-  #   conference: IEEE/CVF Conference on Computer Vision and Pattern Recognition <strong>(CVPR)</strong>, 2020.
-  #   pdf: https://arxiv.org/pdf/2002.10211.pdf
-  #   code: https://github.com/yaoyao-liu/class-incremental-learning/tree/main/mnemonics-training
-  #   page: https://class-il.mpi-inf.mpg.de/mnemonics/
-  #   bibtex: https://class-il.mpi-inf.mpg.de/mnemonics/
-  #   notes: Oral Presentation
-  #   image: ./assets/img/teaser_example.png
-  - title: "Progressive Pretraining Network for 3D System Matrix Calibration in MPI"
-    authors: "<strong><u>Gen Shi</u></strong>, Lin Yin, Yu An, Guanghui Li, etc."
+  - title: "Progressive Pretraining Network for 3D System Matrix Calibration in Magnetic Particle Imaging"
+    authors: "<strong><u>Gen Shi</u></strong>, Lin Yin, Yu An, Guanghui Li, Liwen Zhang, Zhongwei Bian, Ziwei Chen, Haoran Zhang, Hui Hui, Jie Tian"
     conference_short: "IEEE TMI"
     conference: "IEEE Transactions on Medical Imaging, 2023"
     pdf: "https://doi.org/10.1109/TMI.2023.3297173"
     # code: "https://github.com/example/MPI-pretrain"
     # image: "./assets/img/mpi_teaser.jpg"
-    notes: Popular Article
+    notes: Popular Article 
 
   - title: "HeGCL: Advance Self-Supervised Learning in Heterogeneous Graph"
     authors: "<strong><u>Gen Shi</u></strong>, Jian K. Liu, Xuesong Li"
     conference_short: "IEEE TNNLS"
-    conference: "IEEE Trans. on Neural Networks and Learning Systems, 2023"
+    conference: "IEEE Transactions on Neural Networks and Learning Systems, 2023"
     pdf: "https://doi.org/10.1109/TNNLS.2023.3273255"
     # code: ""
     # image: "./assets/img/graph_teaser.png"
     # notes: "Oral Presentation"
+
+  - title: "Benefit from Public Unlabeled Data: A Frangi Filter-based Pretraining Network for 3D Cerebrovascular Segmentation"
+    authors: "<strong><u>Gen Shi</u></strong>, Hao Lu, Hui Hui, Jie Tian"
+    conference_short: MedIA
+    conference: Medical Image Analysis, 2025
+    pdf: https://doi.org/10.1016/j.media.2024.103442
+    # code: ""
+    # image: ./assets/img/cerebrovascular.png
+    # notes: Early Accept
+
+  - title: "The Divided Brain: Functional Brain Asymmetry Underlying Self-Construal"
+    authors: "<strong><u>Gen Shi</u></strong>, Xuesong Li, Yifan Zhu, Ruihong Shang, Yang Sun, Hua Guo, Jie Sui"
+    conference_short: NeuroImage
+    conference: NeuroImage, 2021
+    pdf: https://doi.org/10.1016/j.neuroimage.2021.118382
+    # code: ""
+    # image: ./assets/img/self_construal.png
+    # notes: Published
+
+  - title: "Content-Aware Distillation Network for Real-Time Magnetic Particle Imaging"
+    authors: "<strong><u>Gen Shi</u></strong>, Lin Yin, Zhongwei Bian, Ziwei Chen, Yu An, Hui Hui, Jie Tian"
+    conference_short: IEEE TIM
+    conference: IEEE Transactions on Instrumentation and Measurement, 2025
+    pdf: https://doi.org/10.1109/TIM.2025.3535575
+    # code: ""
+    # image: ./assets/img/mpi_distill.png
+    notes: Popular Article
+
+  - title: "Are Nonimage Data Really Necessary for Disease Prediction With Graph Convolutional Networks?"
+    authors: "<strong><u>Gen Shi</u></strong>, Yifan Zhu, Zhenshen Chen, Jinyan Liu, Xuesong Li"
+    conference_short: IEEE TCDS
+    conference: IEEE Transactions on Cognitive and Developmental Systems, 2023
+    pdf: https://doi.org/10.1109/TCDS.2022.3152791
+    # code: ""
+    # image: ./assets/img/tcds_gcn.png
+    # notes: Vol. 15, No. 1, pp. 252–260
+
+  - title: "Contrastive Hierarchical Augmentation Learning for Modeling Cognitive and Multimodal Brain Network"
+    authors: "<strong><u>Gen Shi</u></strong>, Yuxiang Yao, Yifan Zhu, Xinyue Lin, Lanxin Ji, Wenjin Liu, Xuesong Li"
+    conference_short: IEEE TCSS
+    conference: IEEE Transactions on Computational Social Systems, 2024
+    pdf: https://doi.org/10.1109/TCSS.2024.3402328
+    # code: ""
+    # image: ./assets/img/tcss_contrastive.png
+    # notes: In Press, 1–11
+
+
+
