--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,11 +1,11 @@
 - date: 2024-12
-  title: One paper is accepted by MedIA
+  title: One paper is accepted by <strong><em>MedIA</em></strong>
 
 - date: 2024-12
   title: Funded by NSFC on Youth Basic Research Project (Ph.D. Student)
 
 - date: 2024-10
-  title: One paper is accepted by IEEE TIM
+  title: One paper is accepted by <strong><em>IEEE TIM</em></strong>
 
 - date: 2023-07
-  title: One paper is accepted by IEEE TMI
+  title: One paper is accepted by <strong><em>IEEE TMI</em></strong>
