--- a/_data/news.yml
+++ b/_data/news.yml
@@ -9,3 +9,9 @@
 
 - date: 2023-07
   title: One paper is accepted by <strong><em>IEEE TMI</em></strong>
+
+- date: 2024-05
+  title: One paper is accepted by <strong><em>IEEE TCSS</em></strong>
+
+- date: 2025-01
+  title: One paper is accepted by <strong><em>IEEE TCSS</em></strong>
