--- a/_data/news.yml
+++ b/_data/news.yml
@@ -12,3 +12,9 @@
 
 - date: 2024-05
   title: One paper is accepted by <strong><em>IEEE TCSS</em></strong>
+
+- date: 2025-05
+  title: One co-author paper is accepted by <strong><em>IEEE TIP</em></strong>
+
+- date: 2025-05
+  title: Funded by Beihang Doctoral Excellence project
