--- a/_data/news.yml
+++ b/_data/news.yml
@@ -18,3 +18,6 @@
 
 - date: 2025-05
   title: Funded by Beihang Doctoral Excellence project
+
+- date: 2025-05
+  title: One paper is accepted by <strong><em>IEEE TKDE</em></strong>
