--- a/_data/honors.yml
+++ b/_data/honors.yml
@@ -1,3 +1,11 @@
+- sort_key: 2025-08
+  date: "2025.08"
+  content: Student Travel Award of World Molecular Imaging Congress (WMIC) 2025
+  
+- sort_key: 2025-06
+  date: "2025.06"
+  content: Excellent Graduate Student of Beihang University
+  
 - sort_key: 2024-12
   date: "2024.12"
   content: Funded by NSFC on Youth Basic Research Project (Ph.D. Student)
