--- a/_data/news.yml
+++ b/_data/news.yml
@@ -21,3 +21,8 @@
 
 - date: 2025-05
   title: One paper is accepted by <strong><em>IEEE TKDE</em></strong>
+
+- date: 2025-10
+  title: Awarded the National Scholarship for Postgraduate Students (Ph.D.)
+
+
